fix: change root text-align from center to left

--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@
   width: 100%;
   max-width: 100%;
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
   min-height: 100svh;
   display: flex;
   flex-direction: column;
